food api incorporated

--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -10,11 +10,11 @@
 %dl.dl-horizontal
   %dt Name:
   %dd= @recipe.name
-  %dt Meat:
-  %dd= @recipe.meat
-  %dt Vegetables:
-  %dd= @recipe.vegetables
-  %dt Seaoning:
-  %dd= @recipe.seaoning
+  -# %dt Meat:
+  -# %dd= @recipe.meat
+  -# %dt Vegetables:
+  -# %dd= @recipe.vegetables
+  -# %dt Seaoning:
+  -# %dd= @recipe.seaoning
   %dt Instrucions:
   %dd= @recipe.instrucions
