--- a/app/views/recipes/index.html.haml
+++ b/app/views/recipes/index.html.haml
@@ -1,34 +1,45 @@
-.page-header
-  = link_to new_recipe_path, class: 'btn btn-primary' do
-    %span.glyphicon.glyphicon-plus
-    New Recipe
-  %h1 Listing recipes
+.container
+  .jumbotron
+    .form-group
+      Enter Ingredients!
+      = form_tag(recipes_path, :method => "get", id: "search-form") do
+        = text_field_tag :search, params[:search], placeholder: "chicken,rice,etc..."
+        = submit_tag "Search"
+      - if @recipes.present?
+        -# = debug(@recipes)
+        = render @recipes
+      - else
+        %p
+          Could not find recipe!
 
-.table-responsive
-  %table.table.table-striped.table-bordered.table-hover
-    %thead
-      %tr
-        %th Name
-        %th Meat
-        %th Vegetables
-        %th Seaoning
-        %th Instrucions
-        %th{colspan: 3}
 
-    %tbody
-      - @recipes.each do |recipe|
-        %tr
-          %td= recipe.name
-          %td= recipe.meat
-          %td= recipe.vegetables
-          %td= recipe.seaoning
-          %td= recipe.instrucions
-          %td
-            = link_to recipe do
-              %span.glyphicon.glyphicon-ok
-          %td
-            = link_to edit_recipe_path(recipe) do
-              %span.glyphicon.glyphicon-pencil
-          %td
-            = link_to recipe, data: { confirm: 'Are you sure?' }, method: :delete do
-              %span.glyphicon.glyphicon-remove
+
+
+-# .table-responsive
+-#   %table.table.table-striped.table-bordered.table-hover
+-#     %thead
+-#       %tr
+-#         %th Name
+-#         %th Meat
+-#         %th Vegetables
+-#         %th Seaoning
+-#         %th Instrucions
+-#         %th{colspan: 3}
+-#
+-#     %tbody
+-#       - @recipes.each do |recipe|
+-#         %tr
+-#           %td= recipe.name
+-#           %td= recipe.meat
+-#           %td= recipe.vegetables
+-#           %td= recipe.seaoning
+-#           %td= recipe.instrucions
+-#           %td
+-#             = link_to recipe do
+-#               %span.glyphicon.glyphicon-ok
+-#           %td
+-#             = link_to edit_recipe_path(recipe) do
+-#               %span.glyphicon.glyphicon-pencil
+-#           %td
+-#             = link_to recipe, data: { confirm: 'Are you sure?' }, method: :delete do
+-#               %span.glyphicon.glyphicon-remove
