--- a/app/views/recipes/_api_recipe.html.haml
+++ b/app/views/recipes/_api_recipe.html.haml
@@ -1,9 +1,27 @@
-%p
-  \---- FROM THE API ----
-%p= api_recipe.id
-%p= api_recipe.title
-= image_tag("api_recipe.image.jpg")
-%p= api_recipe.imageType
-%p= api_recipe.usedIngredientCount
-%p= api_recipe.missedIngredientCount
-%p= api_recipe.likes
+.row
+  - @recipes.each do |recipe|
+    .col-sm-4.col-sm-4.col-sm-4
+      .thumbnail
+        = image_tag((api_recipe.image), style: "height: 200px")
+        .caption
+          %h4
+            = link_to api_recipe.title
+-# %p= api_recipe.id
+-# %p= api_recipe.title
+-# %p= image_tag(api_recipe.image)
+-#   = link_to recipe_path
+-# %p= api_recipe.likes
+-#
+-# %panel.panel-default
+-#   .panel-heading
+-#     Ingredients Needed
+-#   %ul.list-group
+-#     - api_recipe.ingredients.each do |ingredient|
+-#       %li.list-group-item= ingredient
+-#
+-# %panel.panel-default
+-#   .panel-heading
+-#     Instructions
+-#   %ul.list-group
+-#     - api_recipe.instructions.each do |instruction|
+-#       %li.list-group-item= instruction
