--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -15,9 +15,9 @@
     .col-sm-10
       = f.text_field :name, class: 'form-control'
   .form-group
-    = f.label :instrucions, class: 'col-sm-2 control-label'
+    = f.label :instructions, class: 'col-sm-2 control-label'
     .col-sm-10
-      = f.text_area :instrucions, class: 'form-control'
+      = f.text_area :instructions, class: 'form-control'
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit class: 'btn btn-primary'
