--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,20 +1,19 @@
 .page-header
-  = link_to recipes_path, class: 'btn btn-default' do
-    %span.glyphicon.glyphicon-list-alt
-    Back
-  = link_to edit_recipe_path(@recipe), class: 'btn btn-primary' do
-    %span.glyphicon.glyphicon-pencil
-    Edit
-  %h1 Show recipe
+%p= api_recipe.id
+%p= api_recipe.title
+%p= image_tag(api_recipe.image)
+%p= api_recipe.likes
 
-%dl.dl-horizontal
-  %dt Name:
-  %dd= @recipe.name
-  -# %dt Meat:
-  -# %dd= @recipe.meat
-  -# %dt Vegetables:
-  -# %dd= @recipe.vegetables
-  -# %dt Seaoning:
-  -# %dd= @recipe.seaoning
-  %dt Instrucions:
-  %dd= @recipe.instrucions
+%panel.panel-default
+  .panel-heading
+    Ingredients Needed
+  %ul.list-group
+    - api_recipe.ingredients.each do |ingredient|
+      %li.list-group-item= ingredient
+
+%panel.panel-default
+  .panel-heading
+    Instructions
+  %ul.list-group
+    - api_recipe.instructions.each do |instruction|
+      %li.list-group-item= instruction
