--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  %h2.text-body-logo.text-center Please sign in...
+  %h2.text-body-logo.text-center Please sign in!
 .social-box
   .row
     .offset-md-3.col-md-6
