--- a/app/views/api_recipes/_api_recipe.html.haml
+++ b/app/views/api_recipes/_api_recipe.html.haml
@@ -1,11 +1,10 @@
-.row
-  - @recipes.each do |recipe|
-    .col-sm-4.col-sm-4.col-sm-4
-      .thumbnail
-        = image_tag((api_recipe.image), style: "height: 200px")
-        .caption
-          %h4
-            = link_to api_recipe.title
+.col-sm-4.col-sm-4.col-sm-4
+  .thumbnail
+    = image_tag((api_recipe.image), style: "height: 200px")
+    .caption
+      %h4
+        = link_to api_recipe.title, api_recipe
+
 -# %p= api_recipe.id
 -# %p= api_recipe.title
 -# %p= image_tag(api_recipe.image)
