some styling done

--- a/app/assets/stylesheets/recipe-index.scss
+++ b/app/assets/stylesheets/recipe-index.scss
@@ -6,6 +6,10 @@
   position: center;
 }
 
-.jumbotron {
-  padding-top: 50px
+.text-body-logo {
+  color: red;
+  font-family: 'Lobster', cursive;
+  margin-top: 80px;
+  font-size: 3em;
+  text-align: left;
 }
