--- a/app/assets/stylesheets/recipe-index.scss
+++ b/app/assets/stylesheets/recipe-index.scss
@@ -11,5 +11,10 @@
   font-family: 'Lobster', cursive;
   margin-top: 80px;
   font-size: 3em;
-  text-align: left;
+  text-align: center;
+}
+.body {
+    background-image: url("logo1.paint");
+    background-repeat: no-repeat;
+    background-position: center;
 }
