--- a/app/views/ingredients/index.html.haml
+++ b/app/views/ingredients/index.html.haml
@@ -13,7 +13,7 @@
         %th Seasoning
         %th Grain
         %th Fruit
-        %th Recipe reference
+        %th Recipe id
         %th{colspan: 3}
 
     %tbody
@@ -24,7 +24,7 @@
           %td= ingredient.seasoning
           %td= ingredient.grain
           %td= ingredient.fruit
-          %td= ingredient.recipe_reference
+          %td= ingredient.recipe_id
           %td
             = link_to ingredient do
               %span.glyphicon.glyphicon-ok
