--- a/app/views/ingredients/show.html.haml
+++ b/app/views/ingredients/show.html.haml
@@ -1,11 +1,7 @@
 .page-header
-  = link_to ingredients_path, class: 'btn btn-default' do
+  = link_to recipes_path, class: 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
-    Back
-  = link_to edit_ingredient_path(@ingredient), class: 'btn btn-primary' do
-    %span.glyphicon.glyphicon-pencil
-    Edit
-  %h1 Show ingredient
+    Next
 
 %dl.dl-horizontal
   %dt Meat:
@@ -18,5 +14,3 @@
   %dd= @ingredient.grain
   %dt Fruit:
   %dd= @ingredient.fruit
-  %dt Recipe reference:
-  %dd= @ingredient.recipe_reference
