--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,9 +4,14 @@
 .navbar-brand {
   font-family: 'Pacifico', cursive;
   font-size: 30px;
-  color: red;
+  color: rgb(190, 219, 57);
+  padding-right: 25px;
+  background-color: rgb(0, 67, 88);
 }
 
+.navbar-inverse {
+  background-color: rgb(0, 67, 88);
+}
 .navbar-inverse .navbar-brand {
-  color: red;
+  color: rgb(190, 219, 57);
 }
