--- a/app/views/recipes/_recipe.html.haml
+++ b/app/views/recipes/_recipe.html.haml
@@ -1,3 +1,6 @@
-%p= recipe.name
-%p= recipe.id
-%p= recipe.instructions
+.col-sm-4.col-sm-4.col-sm-4
+  .thumbnail
+    -# = image_tag((api_recipe.image), style: "height: 200px")
+    .caption
+      %h4
+        = link_to recipe.name
