--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,9 +1,10 @@
 .text-body-logo {
-  color: red;
+  color: rgb(190, 219, 57);
   font-family: 'Lobster', cursive;
   margin-top: 80px;
   font-size: 3em;
   text-align: left;
+  font-weight: bold;
 }
 
 .social-login-button {
