--- a/app/assets/stylesheets/recipe-index.scss
+++ b/app/assets/stylesheets/recipe-index.scss
@@ -5,6 +5,9 @@
   background-image: image('food.png');
   background-repeat: repeat;
 }
+.header {
+  padding-bottom: 20px;
+}
 .index-ingredient-seach-text {
   color: rgb(190, 219, 57);
   font-family: 'Anton', sans-serif;
