--- a/app/views/recipes/_recipe.html.haml
+++ b/app/views/recipes/_recipe.html.haml
@@ -3,4 +3,4 @@
     -# = image_tag((api_recipe.image), style: "height: 200px")
     .caption
       %h4
-        = link_to recipe.name
+        = link_to recipe.name, recipe
