--- a/app/assets/stylesheets/recipe-index.scss
+++ b/app/assets/stylesheets/recipe-index.scss
@@ -5,8 +5,14 @@
   background-image: image('food.png');
   background-repeat: repeat;
 }
-.header {
-  padding-bottom: 20px;
+.header-index {
+  background-image: url('logo2.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 100vh;
+  width: 100%;
+  padding-top: 20px;
 }
 .index-ingredient-seach-text {
   color: rgb(190, 219, 57);
@@ -16,6 +22,36 @@
   font-weight: bold;
   text-align: center;
 }
-.caption{
-  padding-top: 50px
+.thumbnail{
+  height: 300px
+}
+.panel-info {
+  background-color: rgb(253, 116, 0);
+}
+.panel-heading-text {
+  color: rgb(253, 116, 0);
+  background-color: rgb(0, 67, 88);
+  padding-right: 50px;
+}
+.api-info{
+  font-weight: bold;
+}
+
+.no-recipe-text{
+  font-weight: bold;
+  font-size: 20px
+}
+.dd.name-of-recipe{
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(190, 219, 57);
+}
+.search-form {
+  width: 100vw;
+}
+
+#search-form {
+  input {
+    font-size: 3em;
+  }
 }
