--- a/app/assets/stylesheets/recipe-index.scss
+++ b/app/assets/stylesheets/recipe-index.scss
@@ -2,25 +2,24 @@
   text-align: center;
 }
 .index-recipes-each{
-  background-image: image('food.png');
+  background-image: image-url('food.png');
   background-repeat: repeat;
 }
 .header-index {
-  background-image: url('logo2.jpg');
+  background-image: image-url('logo2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  height: 100vh;
+  height: 70vh;
   width: 100%;
-  padding-top: 20px;
 }
 .index-ingredient-seach-text {
   color: rgb(190, 219, 57);
   font-family: 'Anton', sans-serif;
-  margin-top: 80px;
   font-size: 6em;
   font-weight: bold;
   text-align: center;
+
 }
 .thumbnail{
   height: 300px
