--- a/app/views/recipes/show.html.haml
+++ b/app/views/recipes/show.html.haml
@@ -1,6 +1,9 @@
 .header
   %p= @recipe.name
-  %p= image_tag(attachment_url(@recipe, :recipe_image), style: "height: 200px")
+  - if @recipe.recipe_image
+    %p= image_tag(attachment_url(@recipe, :recipe_image), style: "height: 200px")
+  - else
+    %p= image_tag("default.jpg", style: "height: 200px")
 %panel.panel-info
   .panel-heading-text
     Ingredients
